# math-lib-ex

./: CMakeLists.txt  README.md  math-lib-ex.sln  math-lib-ex.vcxproj  math-lib-ex.vcxproj.filters  vcpkg.json
cmake/: config.cmake.in
include/: CustomMath.h  Math.h
src/: CustomMath.cpp  Math.cpp
